// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advanced look #1 1`] = `
<button
  className="Primary-{{ hash }} MyButton-{{ hash }}"
>
  Button.Primary
</button>
`;

exports[`Advanced look #1 2`] = `
<button
  className="Warning-{{ hash }} MyButton-{{ hash }}"
>
  Button.Warning
</button>
`;

exports[`Advanced look #1 3`] = `
<button
  className="SuccessButton-{{ hash }} Primary-{{ hash }} MyButton-{{ hash }}"
>
  SuccessButton
</button>
`;

exports[`Advanced look #1 4`] = `
<button
  className="AlertButton-{{ hash }} Primary-{{ hash }} MyButton-{{ hash }}"
>
  AlertButton
</button>
`;

exports[`Advanced look #1 5`] = `
<button
  className="Large-{{ hash }} AlertButton-{{ hash }} Primary-{{ hash }} MyButton-{{ hash }}"
>
  AlertButton.Large
</button>
`;

exports[`Advanced look #1 6`] = `
<button
  className="Small-{{ hash }} AlertButton-{{ hash }} Primary-{{ hash }} MyButton-{{ hash }}"
>
  AlertButton.Small
</button>
`;
